WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208968
Non-unified build fixes early March 2020 edition Take 2
https://bugs.webkit.org/show_bug.cgi?id=208968
Summary
Non-unified build fixes early March 2020 edition Take 2
Don Olmstead
Reported
2020-03-11 19:18:14 PDT
This is the song that doesn't end. Yes, it goes on and on my friend. Some people started singing it, not knowing what it was, And they'll continue singing it forever just because...
Attachments
Patch
(5.45 KB, patch)
2020-03-11 19:25 PDT
,
Don Olmstead
no flags
Details
Formatted Diff
Diff
Patch
(5.45 KB, patch)
2020-03-11 19:28 PDT
,
Don Olmstead
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Don Olmstead
Comment 1
2020-03-11 19:25:22 PDT
Comment hidden (obsolete)
Created
attachment 393327
[details]
Patch
Don Olmstead
Comment 2
2020-03-11 19:28:49 PDT
Created
attachment 393328
[details]
Patch
WebKit Commit Bot
Comment 3
2020-03-11 20:19:13 PDT
Comment on
attachment 393328
[details]
Patch Clearing flags on attachment: 393328 Committed
r258310
: <
https://trac.webkit.org/changeset/258310
>
WebKit Commit Bot
Comment 4
2020-03-11 20:19:15 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2020-03-11 20:20:18 PDT
<
rdar://problem/60354166
>
Darin Adler
Comment 6
2020-03-15 12:18:57 PDT
Comment on
attachment 393328
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=393328&action=review
> Source/WebCore/editing/TextIterator.h:30 > +#include "SimpleRange.h"
Oh, no, really!? We definitely don’t want TextIterator.h to include SimpleRange.h. It’s the .cpp files that need it that should be including it. I know there could be a lot of them, but please don’t add this to the header like this.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug