Non-unified build fixes early March 2020 edition Take 2 https://bugs.webkit.org/show_bug.cgi?id=208968

Unreviewed build fix.


Source/WebCore:

* editing/TextIterator.cpp:
* editing/TextIterator.h:
* editing/TextManipulationController.cpp:
* editing/VisibleSelection.cpp:
* editing/VisibleUnits.cpp:

Source/WebKit:

* WebProcess/GPU/graphics/RemoteImageBufferMessageHandler.cpp:
* WebProcess/GPU/media/RemoteMediaPlayerManager.cpp:
(WebKit::RemoteMediaPlayerManager::createRemoteMediaPlayer):


Canonical link: https://commits.webkit.org/221880@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258310 268f45cc-cd09-0410-ab3c-d52691b4dbfc